--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 gremlin.endpoint=localhost
-gremlin.port=8889
-gremlin.username=${your-username}
-gremlin.password=${your-password}
+gremlin.port=8182
+gremlin.username=
+gremlin.password=
 gremlin.sslEnabled=false
 
-## Valid serializer(case sensitive): GRAPHSON(default), GRAPHSON_V1D0, GRAPHSON_V2D0, GRYO_V1D0, GRYO_LITE_V1D0
-# gremlin.serializer=GRAPHSON
+## Use GraphBinary serializer for JanusGraph compatibility
+gremlin.serializer=GRAPHBINARY_V1
